katars/tests/snaps/snapshots/snap_errors__unknown_module.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"import std.nonexistent\")"
---
Error: unknown module 'std.nonexistent'
   ╭─[<test>:1:8]
   │
 1 │ import std.nonexistent
   │        ───────┬───────  
   │               ╰───────── unknown module 'std.nonexistent'
───╯
